examples/vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: vpc stack
Parameters:
  CIDR:
    Type: String
    Default: 10.0.0.0/16
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !Ref CIDR

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Properties:
      InternetGatewayId:
        Ref: InternetGateway
      VpcId:
        Ref: VPC
    Type: AWS::EC2::VPCGatewayAttachment

  Nat:
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NatEip
          - AllocationId
      SubnetId:
        Ref: PublicSubnet
    Type: AWS::EC2::NatGateway
  NatEip:
    Properties:
      Domain: vpc
    Type: AWS::EC2::EIP
  NatRoute:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: Nat
      RouteTableId:
        Ref: PrivateRouteTable
    Type: AWS::EC2::Route

  PrivateSubnet:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs:
              Ref: AWS::Region
      CidrBlock: !Join [ ".", [ !Select [ 0, !Split [".", !Ref CIDR] ], !Select [ 1, !Split [".", !Ref CIDR] ], '1.0/24' ] ]
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  PrivateSubnet2:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs:
              Ref: AWS::Region
      CidrBlock: !Join [ ".", [ !Select [ 0, !Split [".", !Ref CIDR] ], !Select [ 1, !Split [".", !Ref CIDR] ], '2.0/24' ] ]
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  PrivateRouteTable:
    Properties:
      VpcId:
        Ref: VPC
    Type: AWS::EC2::RouteTable

  PrivateSubnetRouteTableAssociation1:
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      SubnetId:
        Ref: PrivateSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation

  PrivateSubnetRouteTableAssociation2:
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      SubnetId:
        Ref: PrivateSubnet2
    Type: AWS::EC2::SubnetRouteTableAssociation

  PublicSubnet:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs:
              Ref: AWS::Region
      CidrBlock: !Join [ ".", [ !Select [ 0, !Split [".", !Ref CIDR] ], !Select [ 1, !Split [".", !Ref CIDR] ], '100.0/24' ] ]
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  PublicRouteTable:
    Properties:
      VpcId:
        Ref: VPC
    Type: AWS::EC2::RouteTable

  PublicSubnetRouteTableAssociation:
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation

  Route:
    DependsOn: AttachGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: PublicRouteTable
    Type: AWS::EC2::Route
